--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
+html{
+  scroll-behavior: smooth;
+  color: white;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-column{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.flex-row{
+  display: flex;
+  flex-direction: row;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.bg{
+  background-color: rgba(0, 0, 0, 0.4);
+  height: 100vh;
+}
+
+
+.bgi{
+  background-image: url('./fondo.jpg');
+}
+
+.grey{
+  background-color: rgba(30, 30, 30, 1.0);
+}
+
+
+.center{
+  align-self: center;
+}
+
+.arrow {
+  box-sizing: border-box;
+  height: 5vw;
+  width: 5vw;
+  border-style: solid;
+  border-color: white;
+  border-width: 0px 1px 1px 0px;
+  transform: translate(0,-30px) rotate(45deg);
+}
+
+.arrow:hover {
+  border-bottom-width: 4px;
+  border-right-width: 4px;
+  cursor: pointer;
+}
+
+.carousel-root{
+  background-color: rgba(50, 50, 50, 1.0);
+}
+
+.thumbs-wrapper{
+  margin: 0 !important;
+  padding: 0 !important;
+  height: 0 !important;
+}
+
+@media only screen and (max-height: 750px){
+  .info{
+      height: 200px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media only screen and (max-height: 500px){
+  .info{
+      height: 100px;
   }
 }
